--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ DB_DATABASE=adonis
 
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
+
+TELEGRAM_TOKEN=1955383827:AAF8mBa3Fj5_27rkPpDRho6TccSChRVaq4s
+TELEGRAM_CHAT_ID=-1001758110865
