--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8"
+    "@adonisjs/shield": "^1.0.8",
+    "axios": "^0.24.0"
   },
   "devDependencies": {},
   "autoload": {
