--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,5 @@ DB_DATABASE=adonis
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
 
-TELEGRAM_TOKEN=1955383827:AAF8mBa3Fj5_27rkPpDRho6TccSChRVaq4s
-TELEGRAM_CHAT_ID=-1001758110865
+TELEGRAM_TOKEN=***your tg bot token***
+TELEGRAM_CHAT_ID=***your chat id***
